# bidding_contract

./: Cargo.toml  README.md
schema/: bidding_contract.json
src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
src/multitest/: contract.rs  tests.rs
