[package]
name = "bidding_contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"] # Added to create dynamic library

[features]
library = []
tests = ["library", "cw-multi-test"]

[dependencies]
cosmwasm-std = "1.1.9"
cosmwasm-schema = "1.1.9"
cw-multi-test = { version = "0.16.2", optional = true }
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
schemars = "0.8.11"

[dev-dependencies]
cw-multi-test = "0.16.2"
